# smpl_ros

./: .gitignore  CMakeLists.txt  README.md  config.json  evaluate.py  fitting_smpl.cpp  optimized_params.json  package.xml
include/: ClientPublisher.hpp  o3d_converter.h  smpl_rviz.hpp  zed_utils.hpp
include/smpl_ros_viewer/: smpl_rviz.hpp
include/tqdm/: tqdm.hpp
include/utils/: o3d_converter.h  ros_pbar.hpp
include/zed_smpl_tracking/: ClientPublisher.hpp  GLViewer.hpp  bodyStruct.hpp  fuseSkeletons.hpp  utils.hpp  zed_utils.hpp
include/zed_smpl_tracking/yolov8/: yolov8_seg.h  yolov8_utils.h
launch/: smpl_ros_fitting.launch.py  smpl_ros_visualizer.launch.py  zed_tracking.launch.py
rviz/: fitting.rviz  vis.rviz
src/: fitting_smpl_ros.cpp  rviz.rviz
src/body_fitting/: config.json  fitting_sequence_smpl_ros.cpp  fitting_smpl_ros.cpp
src/smpl_ros_viewer/: smpl_ros_viewer.cpp
src/zed_smpl_tracking/: ClientPublisher.cpp  GLViewer.cpp  smpl_ros_viewer.cpp  zed_fusion_smpl_tracking.cpp  zed_smpl_tracking.cpp
src/zed_smpl_tracking/yolov8/: yolov8_seg.cpp  yolov8_utils.cpp
